$Id$

0.6.2beta
	- preliminary support for DBI (DBD:Pg)
	- fixes to zone file parsing code (UtilZone.pm)
	- configuration file directory is now patched into Sauron.pm
	  during install
	- removed (unnesessary) dependency on "warnings" module
	
0.6.1	
	- sauron: not anymore generating "broken" aliases to expired
	  hosts (if a host has expired aliases are now considered expired too)
	- added new utility remove-hosts that removes hosts based on
	  list of IPs or MACs read from a file
	- sauron: bug fixes for $DOMAIN substitution in MX records and
	  CNAME alias generation for zone A record.
	- sauron: added --dhcpclass option	
	- check-pending: added --dir & --cmd options for easily running
	  given command if there is pending hosts for server
	- sauron.cgi: added "Ping Sweep" button to scan selected network
	- sauron.cgi: added "Ping Sweep" button for "ping scanning"
	  (using nmap) displayed hosts from search results.
	- sauron.cgi: added "-> This Subnet" jump button in host display
	- fixed several bugs in special "CNAME hack" delegations for smaller
	  than class-C nets
	
0.6.0
	- status: added --versions option for displaying module versions
	- fixed problem with newer Pg.pm modules that caused
	  "Error: cannot save state..." messages when trying to use web
	  interface
	- new configuration option: SAURON_NO_REMOTE_ADDR_AUTH
	- generic man page for sauron added
	- added import-zone utility; imports zones into existing server from
	  a zone file or directly from DNS (using zone transfer)
	- sauron: now uses temp files when creating new configuration files
	- added delgroup utility
	- status: now returns with exit code 2, when  run using 
	  option --pending=server and there are pending host changes
	  (returns 0 otherwise, or 1 if there was an error)
	  option 
	- initial draft of User's Guide now included
	- Sauron::UtilDhcp module was missing from Makefile.in
	- various typo fixes

0.5.1
	- sauron: new --check option to automatically validating