@@ -267,6 +267,9 @@ load_config();
   {ftype=>2, tag=>'txt', name=>'Info (TXT)', type=>['text','text'], fields=>2,
    len=>[40,15], empty=>[0,1], elabels=>['TXT','comment'], iff=>['type','M'],
    iff2=>['reverse','f']},
+  {ftype=>2, tag=>'zentries', name=>'Custom zone file entries',
+   type=>['text','text'], fields=>2, len=>[40,15], maxlen=>[100,20],
+   empty=>[0,1], elabels=>['Zone Entry','comment'], iff=>['type','M']},
   {ftype=>2, tag=>'allow_update', 
    name=>'Allow dynamic updates (allow-update)', type=>['cidr','text'],
    fields=>2, len=>[40,15], empty=>[0,1], elabels=>['CIDR','comment'],
